$Date$

VEGAN DEVEL VERSIONS at http://r-forge.r-project.org/

Version 1.18-33 (opened June 14, 2011)
	
	
Version 1.18-32 (closed June 14, 2011)

	* closed with the release of vegan_1.17-11.

	* anova.prc: new function that casts prc() result to a
	corresponding rda() and submits this to anova.cca(). With this is
	it is possible to analyse anova(..., by = "axis"). Other cases are
	possible as well, but not very useful as "margin" and "term" only
	analyse all constraints as a single matrix. Now some functions
	that were made refuse prc() results in 1.18-30 work again, and
	anova.ccabyaxis() even makes sense. This fixes a problem Jae
	Pasari raised in his email.

	* vegdist docs: Brian Inouye informed us that we are not
	calculating the Raup-Crick index like originally suggested: we use
	equal probabilities for all species, but the species probabilities
	should vary with their frequencies. Doing this would break
	vegdist.c design, and require Fisher's non-central hypergeometric
	distribution, and that is not available in base R. However, it
	seems that a simulation version could be implemented in
	oecosimu(). Now we document the problems in vegdist.Rd, but do not
	correct the behaviour. The key paper is available over
	http://www.esajournals.org/doi/full/10.1890/ES10-00117.1

	* rda & capscale: similar changes as in cca in r1517 (version
	1.18-24). CA component is always returned, even with zero rank,
	and CCA and pCCA components are NULL only if they were not
	specified originally, and if they become zero rank because of
	aliasing etc, they are returned as zero components (instead of
	NULL). 

	* print of cca/rda/capscale: do not "Proportion" column in
	unconstrained ordination which only has one component. However,
	this will be printed also with zero pCCA or CCA (but not with
	NULL). 
	
Version 1.18-31 (closed May 30, 2011)

	* ordiR2step: more informative about rejecting 'scope': partial
	models are not (currently) accepted due to the design of
	RsquareAdj.rda().